@@ -1,3 +1,8 @@
+2010-03-12 Stan Shebs  <stan@codesourcery.com>
+
+	* ax-gdb.c (gen_expr): Add shift expressions.
+	(gen_expr_binop_rest): Ditto.
+
 2010-03-12  Sami Wagiaalla  <swagiaal@redhat.com>
 
 	* buildsym.c (finish_block): Reset using_directives pointer
